Main Branch - Add SQL 2012 Abilities, Fix issue with Duplicate Key violation on adding dependancies. Cleanup Setup Program to NOT include all the SQL Server DLL's.  This decreases the installer size BUT you must have the SQL Server client tools installed for the version of SQL Server that you want to scan.
Changeset:95985

--- a/TestTSQLParser/TestTSQLParser.csproj
+++ b/TestTSQLParser/TestTSQLParser.csproj
@@ -62,7 +62,7 @@
     <Compile Include="SqlStatementTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\CodePlexBIMetaData\TSQLParser\TSQLParser.csproj">
+    <ProjectReference Include="..\TSQLParser\TSQLParser.csproj">
       <Project>{CA0FDA81-289A-4A09-973F-4D7DAC7455AA}</Project>
       <Name>TSQLParser</Name>
     </ProjectReference>
