--- a/DependencyViewer/DependencyViewer.csproj
+++ b/DependencyViewer/DependencyViewer.csproj
@@ -42,13 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Msagl">
-      <HintPath>C:\Program Files\Microsoft\Microsoft Automatic Graph Layout\bin\Microsoft.Msagl.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Msagl.Drawing">
-      <HintPath>C:\Program Files\Microsoft\Microsoft Automatic Graph Layout\bin\Microsoft.Msagl.Drawing.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Msagl.GraphViewerGdi">
-      <HintPath>C:\Program Files\Microsoft\Microsoft Automatic Graph Layout\bin\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Microsoft\Microsoft Automatic Graph Layout\bin\Microsoft.Msagl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -109,10 +103,20 @@
   <ItemGroup>
     <Content Include="Web.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DrawingAndGraphViewerGdi\Drawing\Drawing.csproj">
+      <Project>{c205ac5b-1ff7-434f-9dd7-e40c16eabcc3}</Project>
+      <Name>Drawing</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DrawingAndGraphViewerGdi\GraphViewerGdi\GraphViewerGDI.csproj">
+      <Project>{5a0da990-f31c-463e-b58f-1e6bf1996234}</Project>
+      <Name>GraphViewerGDI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_BuildAction="ReBuild" />
+      <UserProperties BuildVersion_BuildAction="ReBuild" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
