--- a/DependencyViewer/DependencyViewer.csproj
+++ b/DependencyViewer/DependencyViewer.csproj
@@ -42,7 +42,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Msagl">
-      <HintPath>C:\Program Files (x86)\Microsoft\Microsoft Automatic Graph Layout\bin\Microsoft.Msagl.dll</HintPath>
+      <HintPath>..\..\MSAGL\Microsoft.Msagl.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.Drawing">
+      <HintPath>..\..\MSAGL\Microsoft.Msagl.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Msagl.GraphViewerGdi">
+      <HintPath>..\..\MSAGL\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
