--- a/DependencyAnalyzer2014/DependencyAnalyzer2014.csproj
+++ b/DependencyAnalyzer2014/DependencyAnalyzer2014.csproj
@@ -82,6 +82,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\DependencyAnalyzer2008\ColumnEnumerator.cs">
