--- a/DependencyViewer/DependencyViewer.csproj
+++ b/DependencyViewer/DependencyViewer.csproj
@@ -42,13 +42,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Msagl">
-      <HintPath>..\..\MSAGL\Microsoft.Msagl.dll</HintPath>
+      <HintPath>..\..\..\..\Repos\automatic-graph-layout\GraphLayout\MSAGL\bin\Debug\Microsoft.Msagl.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Msagl.Drawing">
-      <HintPath>..\..\MSAGL\Microsoft.Msagl.Drawing.dll</HintPath>
+      <HintPath>..\..\..\..\Repos\automatic-graph-layout\GraphLayout\Drawing\bin\Debug\Microsoft.Msagl.Drawing.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Msagl.GraphViewerGdi">
-      <HintPath>..\..\MSAGL\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
+      <HintPath>..\..\..\..\Repos\automatic-graph-layout\GraphLayout\tools\GraphViewerGDI\bin\Debug\Microsoft.Msagl.GraphViewerGdi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -118,20 +118,10 @@
   <ItemGroup>
     <Content Include="Web.ico" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DrawingAndGraphViewerGdi\Drawing\Drawing.csproj">
-      <Project>{c205ac5b-1ff7-434f-9dd7-e40c16eabcc3}</Project>
-      <Name>Drawing</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DrawingAndGraphViewerGdi\GraphViewerGdi\GraphViewerGDI.csproj">
-      <Project>{5a0da990-f31c-463e-b58f-1e6bf1996234}</Project>
-      <Name>GraphViewerGDI</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_BuildAction="ReBuild" />
+      <UserProperties BuildVersion_BuildAction="ReBuild" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
